# jksa-learning

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  prestart.sh  pyproject.toml  run.sh
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 1391baf1ce65_init.py  2125517549ec_before_launch.py
app/: backend_pre_start.py  database.py  deps.py  init_data.py  init_db.py  initial_data.py  main.py  models.py
app/controller/: api.py
app/controller/endpoints/: attempt.py  auth.py  card.py  goal.py  lap.py  login.py  recipe.py  resource.py  standard.py  topic.py  user.py
app/core/: auth.py  config.py  security.py
app/crud/: __init__.py  base.py  crud_attempt.py  crud_card.py  crud_goal.py  crud_goal_resource.py  crud_group.py  crud_resource.py  crud_standard_resource.py  crud_user.py
app/tests/: conftest.py  tables.py  test_config.py  test_crud.py  test_models.py  utils.py
app/tests/endpoints/: test_attempt.py  test_auth_user.py  test_card.py  test_goal.py  test_lap.py  test_resource.py  test_root.py
app/tests/tools/: mock_data.py  mock_params.py  mock_user.py  tables.py  utils.py
app/tests/unit/: test_basics.py  test_config.py  test_crud.py  test_models.py
backend/: Dockerfile  Dockerfile-dev
backend/app/: .coveragerc  README.md  prestart.sh  pyproject.toml  run.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2125517549ec_before_launch.py
backend/app/app/: alembic.ini  backend_pre_start.py  database.py  deps.py  initial_data.py  main.py  models.py
backend/app/app/controller/: api.py
backend/app/app/controller/endpoints/: auth.py  card.py  resource.py  standard.py
backend/app/app/core/: auth.py  config.py  security.py
backend/app/app/crud/: base.py  crud_goal_resource.py  crud_group.py  crud_lap.py  crud_standard.py  crud_standard_resource.py  crud_topic.py
backend/app/app/tests/: conftest.py  env_cmd.py
backend/app/app/tests/endpoints/: test_attempt.py  test_auth_user.py  test_card.py  test_goal.py  test_resource.py
backend/app/app/tests/tools/: mock_params.py  mock_user.py
backend/app/app/tests/unit/: test_basics.py  test_crud.py
backend/app/scripts/: run_pytest.sh
scripts/: run_pytest.sh
